<resources>
    <string name="app_name">CC&amp;C</string>

    <!--Network-->
    <string name="network_error_connection">Problem with the Internet connection.</string>
    <string name="network_error_server">Server is temporarily not available.</string>
    <string name="network_error_unexpected">An unexpected error occurred.</string>

    <!--Keyboard-->
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="percent">%</string>
    <string name="plus">+</string>
    <string name="triple_zero">000</string>
    <string name="ac">AC</string>
    <string name="delete">DEL</string>

    <!--Menu-->
    <string name="settings">Settings</string>
    <string name="feedback">FeedBack</string>
    <string name="support">Support</string>
    <string name="on_github">On Github</string>

    <!--SettingsFragment-->
    <string name="settings_fragment_toolbar_title">Settings Fragment</string>
    <string name="search">Search</string>
    <string name="select_all">Select All</string>
    <string name="deSelect_all">Deselect All</string>
    <string name="base_currency">Base Currency</string>

    <!--Snacky Text-->
    <string name="rate_not_available_offline">This currency is not available offline, please change your base currency.</string>
    <string name="choose_at_least_two_currency">Please Select at least 2 currencies from Settings</string>
    <string name="choose_currencies">Please Select at least 2 currencies</string>
    <string name="select">Select</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="change">Change</string>
    <string name="ok">@android:string/ok</string>
    <string name="init_app_data">App data initializing…</string>

    <!--Toasty Text-->
    <string name="max_input">Maximum number of input exceeded.</string>
    <string name="database_success">No internet connection! Using saved offline rate.</string>
    <string name="database_success_with_date">No internet connection! Using the last saved rates. Last update: %s</string>

    <!--Support-->
    <string name="github_url">https://github.com/CurrencyConverterCalculator/androidCCC</string>
    <string name="support_us">Support us !</string>

    <!--Dialog-->
    <string name="rate_and_support">Please rate and comment to the app at Google Play Store :)</string>
    <string name="rate">RATE</string>
    <string name="update">Update</string>

    <!--Mail-->
    <string name="mail_developer">mr.mustafa.ozhan@gmail.com\</string>
    <string name="mail_feedback_subject">Feedback for My Currencies</string>
    <string name="mail_extra_text">Dear Developer,</string>
    <string name="mail_intent_title">Send Feedback:</string>
    <string name="app_market_link">https://play.google.com/store/apps/details?id=mustafaozhan.github.com.mycurrencies</string>

    <!--Update Dialog-->
    <string name="remote_config_title">App Update</string>
    <string name="remote_config_description">Looks like you have an older\nversion of the app.\nPlease update to get latest\nfeatures and best experience.</string>

    <!--Log-->
    <string name="error_tag_updating_ui">Updating UI</string>
    <string name="error_message_updating_ui">If there is no error Updating UI successful</string>

    <!--Intro Sliders-->
    <string name="next">NEXT</string>
    <string name="got_it">GOT IT</string>
    <string name="slide_intro_title">Currency Converter Calculator</string>
    <string name="slide_intro_text_2">Simple user interface\n\nFast responses\n\nAccurate rates\n\nEasy to use</string>
    <string name="slide_filter_title">Filter your list !</string>
    <string name="slide_filter_text_1">By default CCC has selected all currencies</string>
    <string name="slide_filter_text_2"> If you want to filter them\n\nClick Top Right Menu > Settings\n Select the currencies you are interested in</string>
    <string name="slide_bug_report_title">Bugs &amp; Issues</string>
    <string name="slide_bug_report_text_1">If you experienced any Bug or Issue</string>
    <string name="slide_bug_report_text_2"> You can let us know! Click Top Right Menu\n\n - Feedback > Than you can write email to us\nor\n- On GitHub > Than create a GitHub Issue to CurrencyConverterCalculator/androidCCC Project\n\n</string>
    <string name="slide_disable_ads_title">Disable Ads</string>
    <string name="slide_disable_ads_text_1">If you want to disable Ads for 48 hours</string>
    <string name="slide_disable_ads_text_2"> Please navigate\n\nClick Top Right Menu > Disable Ads\n\n After you watch a video app will be ad free for 24 hours!</string>

    <!-- Test Ad ID-->
    <string name="banner_ad_unit_id_main">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_settings">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_text_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_video_ad_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--Rewarded Ad-->
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_ads_text">Would you like to watch a video to stop ads for 24 hours ?</string>
    <string name="watch">Watch</string>
</resources>
