<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="actions"
            type="mustafaozhan.github.com.mycurrencies.ui.main.calculator.model.CalculatorAction" />
    </data>

    <TableLayout style="@style/MatchStyle">

        <TableRow style="@style/SubKeyboardTableRowStyle">

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/seven)}"
                android:text="@string/seven" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/eight)}"
                android:text="@string/eight" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/nine)}"
                android:text="@string/nine" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/multiply)}"
                android:text="@string/multiply" />
        </TableRow>

        <TableRow style="@style/SubKeyboardTableRowStyle">

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/four)}"
                android:text="@string/four" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/five)}"
                android:text="@string/five" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/six)}"
                android:text="@string/six" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/divide)}"
                android:text="@string/divide" />
        </TableRow>

        <TableRow style="@style/SubKeyboardTableRowStyle">

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/one)}"
                android:text="@string/one" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/two)}"
                android:text="@string/two" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/three)}"
                android:text="@string/three" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/minus)}"
                android:text="@string/minus" />
        </TableRow>

        <TableRow style="@style/SubKeyboardTableRowStyle">

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/dot)}"
                android:text="@string/dot" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/zero)}"
                android:text="@string/zero" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/percent)}"
                android:text="@string/percent" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/plus)}"
                android:text="@string/plus" />
        </TableRow>

        <TableRow style="@style/SubKeyboardTableRowStyle">

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/triple_zero)}"
                android:text="@string/triple_zero" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/ac)}"
                android:text="@string/ac" />

            <Button
                style="@style/KeyboardTextStyle"
                android:onClick="@{() -> actions.onKeyPress(@string/delete)}"
                android:text="@string/delete" />
        </TableRow>
    </TableLayout>
</layout>