<!--
  Copyright (c) 2020 Mustafa Ozhan. All rights reserved.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/feedback"
        android:orderInCategory="2"
        android:title="@string/feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/support"
        android:orderInCategory="3"
        android:title="@string/support"
        app:showAsAction="never" />
    <item
        android:id="@+id/removeAds"
        android:orderInCategory="4"
        android:title="@string/remove_ads"
        app:showAsAction="never" />
    <item
        android:id="@+id/onGithub"
        android:orderInCategory="5"
        android:title="@string/on_github"
        app:showAsAction="never" />
</menu>