<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2020 Mustafa Ozhan. All rights reserved.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SlideLayout">

    <TextView
        style="@style/SlideTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_bug_report_title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_slide_items"
        android:src="@drawable/ic_bug_report"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/SlideSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_bug_report_text_1" />

    <TextView
        style="@style/SlideDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_bug_report_text_2" />
</LinearLayout>