<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_settings_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/txtSettingsToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/blue_grey_100" />

    <Button
        android:id="@+id/btnSelectAll"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/select_all"
        android:textAppearance="@style/TextStyleSmall" />

    <Button
        android:id="@+id/btnDeSelectAll"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/deSelect_all"
        android:textAppearance="@style/TextStyleSmall" />
</android.support.v7.widget.Toolbar>